--- a/wp-content/themes/furrenzpetsitters/style.css
+++ b/wp-content/themes/furrenzpetsitters/style.css
@@ -103,5 +103,5 @@ Twenty Twenty-One is distributed under the terms of the GNU GPL.
 .next-button {
   /* width: 700px; */
   /* margin: 25px auto 0; */
-  float: left !important;
+  /* float: left !important; */
 }
