--- a/wp-content/themes/furrenzpetsitters/style.css
+++ b/wp-content/themes/furrenzpetsitters/style.css
@@ -128,6 +128,19 @@ Twenty Twenty-One is distributed under the terms of the GNU GPL.
   padding: 0 !important;
 }
 
+.wpcf7 form.invalid .wpcf7-response-output,
+.wpcf7 form.unaccepted .wpcf7-response-output,
+.wpcf7 form.payment-required .wpcf7-response-output {
+  border-color: transparent !important;
+  border-color: transparent !important;
+  position: relative !important;
+  text-align: center !important;
+  font-weight: bold !important;
+  font-size: 2rem !important;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
 input[type='submit'] {
   border: none;
   background-color: #bb8eb3;
