--- a/wp-content/themes/furrenzpetsitters/style.css
+++ b/wp-content/themes/furrenzpetsitters/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 /*
 Theme Name: furrenzpetsitters
 Theme URI: https://wordpress.org/themes/twentytwentyone/
@@ -17,6 +18,7 @@ Tags: one-column, accessibility-ready, custom-colors, custom-menu, custom-logo, 
 Twenty Twenty-One WordPress Theme, (C) 2020 WordPress.org
 Twenty Twenty-One is distributed under the terms of the GNU GPL.
 */
+
 /**
  * SETTINGS
  * File-header..........The file header for the themes style.css file.
@@ -91,6 +93,7 @@ Twenty Twenty-One is distributed under the terms of the GNU GPL.
  * Editor Font Sizes....Editor Font Sizes.
  * Measure..............The width of a line of text, in characters.
  */
+
 /* Categories 01 to 03 are the basics. */
 
 .mbl-sc li {
@@ -156,10 +159,10 @@ input[type='submit'] {
 
 @media (min-width: 768px) {
   .navbar-nav {
-    float: none;
+    float: none !important;
     margin: 0;
     /* text-align: center; */
     display: inline-block;
-    margin: 0 auto;
+    margin: 0 auto !important;
   }
 }
