--- a/wp-content/themes/furrenzpetsitters/style.css
+++ b/wp-content/themes/furrenzpetsitters/style.css
@@ -171,6 +171,10 @@ input[type='submit'] {
   padding: 1rem;
 }
 
+.top-head .text-box {
+  padding-top: 40px !important;
+}
+
 @media (min-width: 768px) {
   .navbar-nav {
     float: none !important;
