--- a/wp-content/themes/furrenzpetsitters/style.css
+++ b/wp-content/themes/furrenzpetsitters/style.css
@@ -190,6 +190,11 @@ input[type='submit'] {
   top: 380px !important;
 }
 
+.mid-head .so-lang a {
+  display: block;
+  margin-top: 20px !important;
+}
+
 @media (min-width: 768px) {
   .navbar-nav {
     float: none !important;
