--- a/wp-content/themes/furrenzpetsitters/style.css
+++ b/wp-content/themes/furrenzpetsitters/style.css
@@ -206,6 +206,18 @@ input[type='submit'] {
   margin: 2rem 1rem;
 }
 
+.about-team {
+  background-color: #fff;
+  width: 920px;
+  margin: 20px auto 0 auto !important;
+  border-radius: 20px;
+  padding: 40px 30px;
+}
+
+.about-team:first-child {
+  margin-top: 100px;
+}
+
 .about-team-title {
   /* background-color: #fff; */
   width: 920px;
