--- a/wp-content/themes/furrenzpetsitters/style.css
+++ b/wp-content/themes/furrenzpetsitters/style.css
@@ -215,7 +215,7 @@ input[type='submit'] {
 }
 
 .about-team:first-child {
-  margin-top: 100px;
+  margin-top: 100px !important;
 }
 
 .about-team-title {
