--- a/wp-content/themes/furrenzpetsitters/style.css
+++ b/wp-content/themes/furrenzpetsitters/style.css
@@ -231,6 +231,7 @@ input[type='submit'] {
   top: 44px;
   background: #fff;
   padding: 0.5rem 1rem;
+  z-index: 100;
 }
 
 @media (min-width: 768px) {
