--- a/wp-content/themes/furrenzpetsitters/style.css
+++ b/wp-content/themes/furrenzpetsitters/style.css
@@ -229,6 +229,7 @@ input[type='submit'] {
 .desktop-submenu-ul {
   position: absolute;
   top: 44px;
+  display: none;
   background: #fff;
   padding: 0.5rem 1rem;
   z-index: 100;
