--- a/wp-content/themes/furrenzpetsitters/style.css
+++ b/wp-content/themes/furrenzpetsitters/style.css
@@ -233,6 +233,7 @@ input[type='submit'] {
   background: #fff;
   padding: 0.5rem 1rem;
   z-index: 100;
+  width: max-content;
 }
 
 @media (min-width: 768px) {
