--- a/wp-content/themes/furrenzpetsitters/style.css
+++ b/wp-content/themes/furrenzpetsitters/style.css
@@ -241,6 +241,10 @@ input[type='submit'] {
   margin: 0.5rem 0 0.5rem 0;
 }
 
+.mobile-submenu-li {
+  margin: 0 0 0 1rem;
+}
+
 @media (min-width: 768px) {
   .navbar-nav {
     float: none !important;
