--- a/wp-content/themes/furrenzpetsitters/style.css
+++ b/wp-content/themes/furrenzpetsitters/style.css
@@ -19,6 +19,7 @@ Twenty Twenty-One WordPress Theme, (C) 2020 WordPress.org
 Twenty Twenty-One is distributed under the terms of the GNU GPL.
 */
 
+
 /**
  * SETTINGS
  * File-header..........The file header for the themes style.css file.
@@ -94,163 +95,172 @@ Twenty Twenty-One is distributed under the terms of the GNU GPL.
  * Measure..............The width of a line of text, in characters.
  */
 
+
 /* Categories 01 to 03 are the basics. */
 
 .mbl-sc li {
-  width: auto !important;
+    width: auto !important;
 }
 
 .next-button {
-  /* width: 700px; */
-  /* margin: 25px auto 0; */
-  /* float: left !important; */
+    /* width: 700px; */
+    /* margin: 25px auto 0; */
+    /* float: left !important; */
 }
 
 .contact-form-inner .form-group input[type='email'] {
-  background: #e7e8e9 none repeat scroll 0 0;
-  border: 1px solid #c2c3c5;
-  border-radius: 5px;
-  color: #8a8b8d;
-  font: 14px/16px 'Imprima', Arial, Helvetica;
-  height: 34px;
-  letter-spacing: 1px;
-  padding-left: 5px;
-  width: 100%;
+    background: #e7e8e9 none repeat scroll 0 0;
+    border: 1px solid #c2c3c5;
+    border-radius: 5px;
+    color: #8a8b8d;
+    font: 14px/16px 'Imprima', Arial, Helvetica;
+    height: 34px;
+    letter-spacing: 1px;
+    padding-left: 5px;
+    width: 100%;
 }
 
 .wpcf7 form.sent .wpcf7-response-output {
-  border-color: transparent !important;
-  position: relative !important;
-  text-align: center !important;
-  font-weight: bold !important;
-  font-size: 2rem !important;
-  margin: 0 !important;
-  padding: 0 !important;
+    border-color: transparent !important;
+    position: relative !important;
+    text-align: center !important;
+    font-weight: bold !important;
+    font-size: 2rem !important;
+    margin: 0 !important;
+    padding: 0 !important;
 }
 
 .wpcf7 form.invalid .wpcf7-response-output,
 .wpcf7 form.unaccepted .wpcf7-response-output,
 .wpcf7 form.payment-required .wpcf7-response-output {
-  border-color: transparent !important;
-  border-color: transparent !important;
-  position: relative !important;
-  text-align: center !important;
-  font-weight: bold !important;
-  font-size: 2rem !important;
-  margin: 0 !important;
-  padding: 0 !important;
+    border-color: transparent !important;
+    border-color: transparent !important;
+    position: relative !important;
+    text-align: center !important;
+    font-weight: bold !important;
+    font-size: 2rem !important;
+    margin: 0 !important;
+    padding: 0 !important;
 }
 
 input[type='submit'] {
-  border: none;
-  background-color: #bb8eb3;
-  border-radius: 6px;
-  color: #fff;
-  padding: 7px 20px;
+    border: none;
+    background-color: #bb8eb3;
+    border-radius: 6px;
+    color: #fff;
+    padding: 7px 20px;
 }
 
 .contact-form {
-  padding-bottom: 5rem !important;
+    padding-bottom: 5rem !important;
 }
 
 #menu {
-  text-align: center;
+    text-align: center;
 }
 
 .socail-icon {
-  top: 78.5% !important;
+    top: 78.5% !important;
 }
 
 .up-down {
-  right: 15px;
-  position: fixed;
-  top: 74%;
-  z-index: 10;
-  background: #fff;
-  border-radius: 1rem;
-  padding: 1rem;
+    right: 15px;
+    position: fixed;
+    top: 74%;
+    z-index: 10;
+    background: #fff;
+    border-radius: 1rem;
+    padding: 1rem;
 }
 
 .top-head .text-box {
-  padding-top: 48px !important;
+    padding-top: 48px !important;
 }
 
 .top-head {
-  text-align: center;
-  margin-bottom: 50px !important;
+    text-align: center;
+    margin-bottom: 50px !important;
 }
 
 .mid-head .so-lang {
-  left: 0;
-  margin-bottom: 0;
-  margin-left: 0;
-  margin-right: 0;
-  position: absolute;
-  right: 0;
-  top: 300px !important;
+    left: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 0;
+    position: absolute;
+    right: 0;
+    top: 300px !important;
 }
 
 .mid-head .so-lang a {
-  display: block;
-  margin-top: 20px !important;
+    display: block;
+    margin-top: 20px !important;
 }
 
 .last-head {
-  text-align: center;
-  margin-top: 148px !important;
-  margin-bottom: 58px !important;
+    text-align: center;
+    margin-top: 148px !important;
+    margin-bottom: 58px !important;
 }
 
 .badge-award {
-  height: 100px !important;
-  margin: 2rem 1rem;
+    height: 100px !important;
+    margin: 2rem 1rem;
 }
 
 .about-team {
-  background-color: #fff;
-  width: 920px;
-  margin: 20px auto 0 auto !important;
-  border-radius: 20px;
-  padding: 40px 30px;
+    background-color: #fff;
+    width: 920px;
+    margin: 20px auto 0 auto !important;
+    border-radius: 20px;
+    padding: 40px 30px;
 }
 
 .about-team:first-child {
-  margin-top: 100px !important;
+    margin-top: 100px !important;
 }
 
 .about-team-title {
-  /* background-color: #fff; */
-  width: 920px;
-  /* margin: 10px auto 0; */
-  /* border-radius: 20px; */
-  padding: 40px 30px;
+    /* background-color: #fff; */
+    width: 920px;
+    /* margin: 10px auto 0; */
+    /* border-radius: 20px; */
+    padding: 40px 30px;
 }
 
 .desktop-submenu-ul {
-  position: absolute;
-  top: 44px;
-  display: none;
-  left: 0;
-  background: #fff;
-  padding: 0.5rem 1rem;
-  z-index: 100;
-  width: max-content;
+    position: absolute;
+    top: 44px;
+    display: none;
+    left: 0;
+    background: #fff;
+    padding: 0.5rem 1rem;
+    z-index: 100;
+    width: max-content;
 }
 
 .desktop-submenu-ul li {
-  margin: 0.5rem 0 0.5rem 0;
+    margin: 0.5rem 0 0.5rem 0;
 }
 
 .mobile-submenu-li {
-  margin: 0 0 0 1rem !important;
+    margin: 0 0 0 1rem !important;
+}
+
+.cat-note p {
+    font-size: 14px !important;
+}
+
+.cat-note span {
+    font-size: 14px !important;
 }
 
 @media (min-width: 768px) {
-  .navbar-nav {
-    float: none !important;
-    margin: 0;
-    /* text-align: center; */
-    display: inline-block;
-    margin: 0 auto !important;
-  }
+    .navbar-nav {
+        float: none !important;
+        margin: 0;
+        /* text-align: center; */
+        display: inline-block;
+        margin: 0 auto !important;
+    }
 }
